mule-user-guide/v/3.2/jersey-module-reference.adoc
= Jersey Module Reference

Jersey is a JAX-RS (JSR-311) implementation. JAX-RS is a specification that provides a series of annotations and classes which make it possible to build RESTful services. The Mule Jersey transport makes it possible to deploy these annotated classes inside Mule 3.x.

In addition to the annotation capabilities, Jersey contains many useful features:

* The ability to integrate with XML data-binding frameworks such as JAXB
* The ability to produce/consume JSON easily
* The ability to integrate with the JSP presentation tier
* Integration with http://incubator.apache.org/abdera[Abdera] for Atom support.

[WARNING]
Currently implicit views are not supported.

== Classpath Settings

The latest Jersey module uses Jersey 1.3.1.

== Writing a service

We will, however, take a look at a simple hello world service. This example requires the installation of Apache Xalan JARs.

The first step to create a JAX-RS service is to create a class which represents your HTTP resource. In our case we'll create a "HelloWorldResource" class. Methods on this class will be called in response to GET/POST/DELETE/PUT invocations on specific URLs.

The @Path annotation allows you to bind a class/resource to a specific URL. In the sample below we're binding the HelloWorldResource class to the "/helloworld" URL.

[source, java, linenums]
----
package org.mule.transport.jersey;import javax.ws.rs.GET;import javax.ws.rs.Path;import javax.ws.rs.Produces;import javax.ws.rs.PathParam;@Path("/helloworld")public class HelloWorldResource {    @GET    @Produces("text/plain")    @Path("/{name}")    public String sayHelloWithUri(@PathParam("name") String name) {        return "Hello " + name;    }}
----

Looking at the "sayHelloWithUri" method we see several annotations involved:

* @GET specifies that this method is only called on @GET requests to the URL.
* @Produces specifies that this method is producing a resource with a mime type of "text/plain".
* @Path binds this method to the URL "/helloworld/\{name}". The \{name} is a URI template. Anything in this portion of the URL will be mapped to a URI parameter named "name" (see below)
* @PathParam binds the first parameter of the method to the URI parameter in that path named "name".

== Deploy the Web Service

Once you've written your service, you can create a `jersey:resources` component which contains a set of Jersey resources. URL. Below is a very simple configuration which does this:

[source, xml, linenums]
----
<?xml version="1.0" encoding="UTF-8"?><mule xmlns="http://www.mulesoft.org/schema/mule/core"   xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"  xmlns:spring="http://www.springframework.org/schema/beans"  xmlns:jersey="http://www.mulesoft.org/schema/mule/jersey"   xsi:schemaLocation="    http://www.springframework.org/schema/beans http://www.springframework.org/schema/beans/spring-beans-2.5.xsd    http://www.mulesoft.org/schema/mule/core http://www.mulesoft.org/schema/mule/core/3.0/mule.xsd    http://www.mulesoft.org/schema/mule/jersey http://www.mulesoft.org/schema/mule/jersey/3.0/mule-jersey.xsd    http://jersey.apache.org/core http://jersey.apache.org/schemas/core.xsd">      <flow name="HelloWorld">     <inbound-endpoint address="http://localhost:8080/jersey"/>     <jersey:resources>         <component class="org.mule.transport.jersey.HelloWorldResource"/>     </jersey:resources>  </flow>    </mule>
----

== Consume a RESTful Web Service

Once you run this configuration in Mule, you can hit the url: `http://localhost:8080/jersey/helloworld/Dan` and you should see this response in your browser: 'Hello Dan'

== Exception Mappers

Starting with Mule 3.1.2 it is possible to register exception mappers inside the `resources` element. Exception mappers allow mapping generic exceptions that may be thrown in the component class to HTTP response codes.

The following configuration maps a `HelloWorldException` that may be thrown during the execution of `HelloWorldResource` to HTTP error 503 (Service Unavailable):

[source, xml, linenums]
----
<jersey:resources>    <component class="org.mule.module.jersey.HelloWorldResource"/>    <jersey:exception-mapper class="org.mule.module.jersey.exception.HelloWorldExceptionMapper" /></jersey:resources>
----

*HelloWorldExceptionMapper.java*

[source, java, linenums]
----
public class HelloWorldExceptionMapper implements ExceptionMapper<HelloWorldException>{    public Response toResponse(HelloWorldException exception)    {        int status = Response.Status.SERVICE_UNAVAILABLE.getStatusCode();        return Response.status(status).entity(exception.getMessage()).type("text/plain").build();    }}
----

== Context Resolvers

[WARNING]
Since Mule 3.2.2

When you use JAXB for your XML/JSON serialisation, JAXB provides some annotations in case you would need to change the output format. An simple example of such annotations is @XmlElement where you can provide the name of the field as a property on the annotation itself: @XmlElement(name="PersonName").

Some configuration however is not possible to achieve using annotations. For example by default when using JAXB for JSON serialisation, the numbers (int, long ...) are surrounded by double quotes, making them look like strings. This might be good for some projects, but other projects might want to remove those double quotes. This can be done by configuring a ContextResolver on the Jersey resource. Let's take a quick example. If we have a class called Person which internally contains an age property, and we would want this Person object to be returned as a JSON object with the age without quotes, first create the custom context resolver.

*CustomContextResolver.java*

[source, java, linenums]
----
@Providerpublic class CustomContextResolver implements ContextResolver<JAXBContext> {    private JAXBContext context;    private Class[] types = {Person.class};     public JAXBContextResolver() throws Exception     {        this.context = new JSONJAXBContext(            JSONConfiguration.natural().build(), types);    }     public JAXBContext getContext(Class<?> objectType)     {        for (Class type : types)         {            if (type == objectType)             {                return context;            }        }        return null;    }}
----

In the above CustomContextResolver, we are specifying that for class of type Person, we return a JAXBContext which is configured using JSONConfiguration class using the natural notation. Once we have our custom Jersey ContextResolver, we need to configure that in Mule.

[source, xml, linenums]
----
<jersey:resources>    <component class="org.mule.module.jersey.HelloWorldResource"/>    <jersey:context-resolver class="org.mule.module.jersey.context.CustomContextResolver" /></jersey:resources>
----

Without the custom context resolver, the output would look like the following:

[source, code, linenums]
----
{"name":"Alan","age":"26"}
----

With the custom context resolver, the output changes to the following:

[source, code, linenums]
----
{"name":"Alan","age":26}
----

ContextResolvers can also be used to configure other XML/JSON libraries such as Jackson. The following is a custom context resolver to configure Jackson to return numbers in quotes.

*"CustomJacksonContextResolver"*

[source, java, linenums]
----
@Providerpublic class CustomJacksonContextResolver implements ContextResolver<ObjectMapper>{    public ObjectMapper getContext(Class<?> type)    {        ObjectMapper objectMapper = new ObjectMapper();        objectMapper.configure(Feature.WRITE_NUMBERS_AS_STRINGS, true);        objectMapper.configure(Feature.QUOTE_NON_NUMERIC_NUMBERS, true);         return objectMapper;    }}
----

For more information about context resolvers, check out the Jersey http://jersey.java.net/documentation/1.6/user-guide.html[user guide].

== Sending Jersey response to other flows

[WARNING]
====
*If you want to transform or send the request from your jersey component to next resource/flow then you need to use*

ContainerResponse cr = (ContainerResponse) message.getInvocationProperty("jersey_response");
 String messageString = (String) cr.getResponse().getEntity();
 message.setPayload(messageString); 
This will convert org.mule.module.jersey.MuleResponseWriter$1 type to String, which you can forward to your next resource.
====

== Further help

For more information on how to use Jersey, see the http://jersey.dev.java.net/[project website].
